--- a/client/screens/IPScreen/IP.kv
+++ b/client/screens/IPScreen/IP.kv
@@ -30,4 +30,5 @@
 			text: 'Connect'
 			pos_hint: {'center_x': .5}
 			size_hint_x: 1
-			on_release: root.submit()
+			on_release: 
+				root.submit()
